--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-appwrite": "^12.0.0",
     "react": "^18",
     "sass": "^1.71.1",
+    "next": "14.1.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
