--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
+    "html-react-parser": "^5.1.8",
     "next": "14.1.3",
     "node-appwrite": "^12.0.0",
     "react": "^18",
