--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "html-react-parser": "^5.1.8",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.1.3",
     "node-appwrite": "^11.1.1",
     "react": "^18",
+    "react-leaflet": "^4.2.1",
     "sass": "^1.71.1",
     "styled-components": "^6.1.8"
   },
