--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-leaflet": "^4.2.1",
     "sass": "^1.71.1",
+    "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
